--- a/README
+++ b/README
@@ -10,4 +10,6 @@ This code is provided free and open source.
 The sprite's graphic image is copyright John Pavley. All rights reserved.
 (So just replace it with your own.)
 
+Have fun
+
 
